<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_RobotInputs" Id="{47e015e4-5add-4871-9b78-e681cd73ce52}">
    <Declaration><![CDATA[TYPE ST_RobotInputs :
STRUCT
	plcOUT0 AT%Q* : ARRAY [0..7] OF UINT;		//PLC outputs (DI00[4] on Box) mapped to DIs on FANUC DI145
	plcOUT1 AT%Q* : ARRAY [0..7] OF UINT;		//PLC outputs (DI01[0] on Box) mapped to DIs on FANUC DI209
	plcOUT2 AT%Q* : ARRAY [0..7] OF UINT;		//PLC outputs (DI02[0] on Box) mapped to DIs on FANUC DI337
	plcOUT3 AT%Q* : ARRAY [0..7] OF UINT;		//PLC outputs (DI01[0] on Box) mapped to DIs on FANUC DI465
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>