<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="process_gvl" Id="{530e8144-e12b-4fe7-a842-b320890f51db}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
// 	fRobotInputs		:	ST_RobotInputs;
// 	fRobotOutputs		:	ST_RobotOutputs;
	fDecapperControl	:	ST_StepperMotorControl;
	fCameraControl		:	ST_CameraControl;	
	RxBufferEL			: ComBuffer;	(* Receive data buffer; used with all receive function blocks *)
	TxBufferEL			: ComBuffer;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>